<resources>
    <string name="about">About</string>
    <string name="app_theme">Theme</string>
    <string name="help">Help</string>
    <string name="library">Library</string>
    <string name="report_issue">Report Issues</string>
    <string name="presets">Presets</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="support_development">Support Development</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="intensity">Intensity</string>
    <string name="random_preset_description">The preset will have sounds based on the keywords you choose, and the intense preset will play more sounds together.</string>
    <string name="okay">Okay</string>
    <string name="random_preset">Random Preset</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="name">Name</string>
    <string name="pause">Pause</string>
    <string name="preset_already_exists">A preset with that name already exists. Try a different one!</string>
    <string name="preset_name_cannot_be_empty">The preset name is missing. Please enter a unique one!</string>
    <string name="preset_saved">Awesome! Your preset has been saved.</string>
    <string name="save">Save</string>
    <string name="save_preset">Save Preset</string>
    <string name="play">Play</string>
    <string name="play_pause">play or pause</string>
    <string name="stop">Stop</string>
    <string name="volume">Sound volume</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="delete">Delete</string>
    <string name="open_context_menu">Open context menu</string>
    <string name="preset_delete_confirmation">Are you sure you want to delete "%1$s"? You cannot undo this action.</string>
    <string name="preset_deleted">Your preset has been successfully deleted!</string>
    <string name="preset_does_not_exist">It looks like this preset is no longer available. It may have been deleted.</string>
    <string name="preset_info__description">You can easily create your own presets by playing sounds and then saving them from the sound library. Just hit the Save button and give it a unique name.</string>
    <string name="rename">Rename</string>
    <string name="pinned_shortcuts_not_supported">Sorry, it looks like your home screen app doesn\'t support shortcuts.</string>
    <string name="presets_as_home_screen_summary">Make your presets visible when you open the app by enabling this option. You\'ll need to restart the app for the changes to take effect.</string>
    <string name="auto_sleep_schedule_cancelled">Sleep timer cancelled! The app will stay active.</string>
    <string name="reset">Reset</string>
    <string name="sleep_timer_description">Noice will automatically turn off when the timer ends. Use the buttons below to set the timer and add more time.</string>
    <string name="select_preset">Select Preset</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_system_default">System default</string>
    <string name="app_description">Focus, meditate and relax with natural calming noise.</string>
    <string name="appintro__chromecast_desc">Easily share Noice\'s calming ambience on other Chromecast-enabled devices, such as speakers or TVs.</string>
    <string name="appintro__chromecast_title">Chromecast enabled</string>
    <string name="appintro__getting_started_desc_0">Explore all the features by swiping left!</string>
    <string name="appintro__getting_started_desc_1">Let\'s get started!</string>
    <string name="appintro__getting_started_title">Welcome</string>
    <string name="appintro__presets_desc">Save your sound mix by clicking the save button in the bottom corner of the library. Find saved mixes in the \'Presets\' tab of the bottom bar.</string>
    <string name="appintro__presets_title">Save your favourite mixes</string>
    <string name="appintro__library_desc">Use the volume slider to adjust the volume of each sound. Some sounds will repeat seamlessly, while others will repeat with a random delay.</string>
    <string name="appintro__library_title">Design your ideal environment</string>
    <string name="appintro__timer_desc">Fall asleep effortlessly with Noice\'s sleep timer, and wake up to a serene environment with its mindful alarms.</string>
    <string name="appintro__timer_title">Transform your sleep with Noice</string>
    <string name="support_development__donate">Donate</string>
    <string name="support_development__donate_description">Support Noice\'s development and keep the app ad-free with a one-time donation. Your contribution will help us improve the app for you.</string>
    <string name="support_development__donate_google_play_description">Your payment will be securely processed by Google Play. Please note that depending on your location, additional taxes _may be_ added to the final amount.</string>
    <string name="support_development__donate_thank_you_description">Your generous contribution to the Noice project is greatly appreciated and will help us continue to improve the app for you.</string>
    <string name="support_development__share">Share with friends</string>
    <string name="support_development__share_description">Your support doesn\'t have to stop at a donation. You can also help us by spreading the word about Noice to your friends. The more users we have, the more feedback we receive and the better we can make our service for everyone.</string>
    <string name="cast_media">Connect to Chromecast</string>
    <string name="in_app_feedback__description">
    We\'d love to hear from you about the app. Please take a moment to visit our GitHub repository.
    If you didn\'t love the app, please consider opening up an issue explaining your concerns.
    Otherwise, please star the project to show love and support.
    </string>
    <string name="in_app_feedback__title">Submit a review</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="notification_channel_default__description">Sound playback controls</string>
    <string name="notification_channel_default__name">Sound Playback</string>
    <string name="add_to_app_shortcuts">Add to app shortcuts</string>
    <string name="remove_from_app_shortcuts">Remove from app shortcuts</string>
    <string name="app_shortcut_removed">Preset has been removed from app shortcuts!</string>
    <string name="app_shortcut_created">Preset has been added to app shortcuts!</string>
    <string name="app_shortcut_creation_failed">Failed to add the preset to app shortcuts!</string>
    <string name="settings">Settings</string>
    <string name="presets_as_home_screen">Presets as home screen</string>
    <string name="appearance">Appearance</string>
    <string name="sound_fade_in_duration">Sound fade-in duration</string>
    <string name="sound_fade_in_duration_summary">Time duration in seconds for fading-in sounds</string>
    <string name="sound_fade_out_duration">Sound fade-out duration</string>
    <string name="sound_fade_out_duration_summary">Time duration in seconds for fading-out sounds</string>
    <string name="pinned_shortcut_creation_failed">Failed to add the shortcut to the home screen!</string>
    <string name="pinned_shortcut_created">Shortcut has been added to the home screen!</string>
    <string name="skip_to_prev">Previous preset</string>
    <string name="skip_to_next">Next preset</string>
    <string name="unsaved_preset">Unsaved Preset</string>
    <string name="ignore_audio_focus_changes">Ignore audio focus changes</string>
    <string name="ignore_audio_focus_changes_summary_off">Pause Noice when other apps play audio</string>
    <string name="ignore_audio_focus_changes_summary_on">Continue playing Noice even when other apps play audio</string>
    <string name="share">Share</string>
    <string name="export_presets">Export to a file</string>
    <string name="export_presets_summary">Save a copy of your current presets to an external file</string>
    <string name="import_presets">Import from a file</string>
    <string name="import_presets_summary">Importing saved presets from an external file will replace any existing presets</string>
    <string name="remove_all_app_shortcuts">Remove all app shortcuts</string>
    <string name="remove_all_app_shortcuts_confirmation">Are you sure you want to remove all preset shortcuts from the app shortcut menu? This action cannot be undone.</string>
    <string name="all_app_shortcuts_removed">All app shortcuts have been removed!</string>
    <string name="failed_to_write_file">Sorry, we were unable to write to the selected file!</string>
    <string name="export_presets_successful">Presets exported successfully, enjoy!</string>
    <string name="failed_to_read_file">Sorry, we couldn\'t read the selected file!</string>
    <string name="invalid_import_file_format">Invalid file format! Please check the import file.</string>
    <string name="import_presets_successful">Presets imported successfully, ready to be explored!</string>
    <string name="should_display_sound_icons">Display sound icons</string>
    <string name="share_usage_data_consent_title">Data Sharing Preferences</string>
    <string name="share_usage_data_consent_message">We want to make your experience with Noice as smooth as possible. To do that, we collect data on how you use the app and any errors that may occur. It helps us identify issues and improve the app. You can read more about this in our [privacy policy](https://trynoice.com/privacy-policy#software-usage-performance-and-behaviour-data). You can control your data-sharing preferences at any time in the app settings.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="others">Others</string>
    <string name="should_share_usage_data">Share usage and behaviour data</string>
    <string name="should_share_usage_data_summary">Help us improve Noice by sharing usage and behaviour data with the developers</string>
    <string name="failed_to_load_inapp_purchases">Sorry, we couldn\'t load the in-app product details. Please try again later!</string>
    <string name="failed_to_purchase">Sorry, there was an issue starting your purchase. Please try again later!</string>
    <string name="payment_pending">Your payment is being processed. We\'ll notify you once it\'s complete.</string>
    <string name="created_by">Created by</string>
    <string name="account">Account</string>
    <string name="app">App</string>
    <string name="support">Support</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="update_details">Update details</string>
    <string name="delete_account">Delete account</string>
    <string name="monthly_price">%1$s per month</string>
    <string name="renews_on">Renews on %1$s</string>
    <string name="started_on">Started on %1$s</string>
    <string name="ended_on">Ended on %1$s</string>
    <string name="paid_using">Paid using %1$s</string>
    <string name="subscription_payment_pending">Payment pending</string>
    <string name="subscription_payment_refunded">Purchase cancelled and refund initiated</string>
    <string name="change_plan">Change plan</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="add_label">Add label</string>
    <string name="sunday_initial">S</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="vibrate">Vibrate</string>
</resources>